--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,6 @@
 	<uses-permission xmlns:android="http://schemas.android.com/apk/res/android"
 		android:name="android.permission.INTERNET">
 	</uses-permission>
-	
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
